# gewu

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml
.claude/: CLAUDE.md  constitution.md  settings.json
.claude/commands/: commit.md  review-rust-code.md  update-docs.md
.github/workflows/: build.yml
docs/adr/: mvp.md
docs/prd/: mvp.md
migrations/: 20260207090002_init.sql  20260208062844_record.sql
scripts/: docker-compose.yml
src/: main.rs
src/adapters/: deepseek.rs  mod.rs  models.rs  postgres_repo.rs
src/cli/: mod.rs  ui.rs
src/domain/: models.rs  state.rs
src/ports/: llm.rs  mod.rs  repository.rs
src/services/: manager.rs  prompts.rs
