[package]
name = "gewu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
console = "0.16.2"
dialoguer = { version = "0.12.0", features = [
    "completion",
    "fuzzy-select",
    "history",
    "editor",
    "password",
] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
openai-api-rs = "9.0.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
sqlx-db-tester = "0.7.1"
